# Remindly

./: .gitignore  db_connection.py  db_inspect.py  makefile  pyproject.toml
remindly/: pyproject.toml
remindly/src/remindly/: app.py
src/remindly/: app.py  create_table.py  task_dto.py
