[project]
name = "remindly"
version = "0.1.0"
description = ""
authors = [
    {name = "amin",email = "amin.mohiuddin12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.119.1,<0.120.0)",
    "twilio (>=9.8.4,<10.0.0)",
    "dateparser (>=1.2.2,<2.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "openai (>=2.6.0,<3.0.0)",
    "groq (>=0.33.0,<0.34.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "phonenumbers (>=9.0.17,<10.0.0)"
]

[tool.poetry]
packages = [{include = "remindly", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
